[package]
name = "kayak_ui_showcase"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7", features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "dynamic",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher",
    "trace"
     ] }

bevy-inspector-egui = "0.11"
kayak_ui = { git = "https://github.com/StarArawn/kayak_ui", features = [
    "bevy_renderer",
] }


# cargo run --release --features bevy/trace,bevy/trace_chrome
